--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pdfjs-dist": "4.4.168",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
